<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.staleylabs.query</groupId>
    <artifactId>database-query-plugin</artifactId>
    <name>database-query-plugin</name>
    <version>2.0</version>
    <packaging>jar</packaging>
    <url>http://www.jivesoftware.com</url>

    <properties>
        <jive.version>6.0.3.1</jive.version>
        <final.name>${project.artifactId}</final.name>
        <emma-maven-plugin.version>1.0-alpha-3</emma-maven-plugin.version>
        <emma.coverage.out.file>${project.build.directory}/coverage.ec</emma.coverage.out.file>
    </properties>

    <build>
        <finalName>${final.name}</finalName>
        <plugins>
            <!-- For compilation-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <!-- Weave aspects into the plugin -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>aspectj-maven-plugin</artifactId>
                <version>1.3</version>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjtools</artifactId>
                        <version>1.6.9</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <aspectLibraries>
                        <aspectLibrary>
                            <groupId>org.springframework</groupId>
                            <artifactId>spring-aspects</artifactId>
                        </aspectLibrary>
                        <aspectLibrary>
                            <groupId>com.jivesoftware</groupId>
                            <artifactId>jive-core</artifactId>
                        </aspectLibrary>
                    </aspectLibraries>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.2</version>
                <configuration>
                    <appendAssemblyId>false</appendAssemblyId>
                    <descriptors>
                        <descriptor>${basedir}/src/main/assembly/assembly-plugin.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <id>assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.6</version>
                <executions>
                    <execution>
                        <!-- Unpackages this Jive plugin.  That way it can be used in conjunction with the -DpluginDirs= property, which
                             bypasses the standard plugin installation (which happens via the admin console), by pointing to exploded plugin jar created by this. -->
                        <id>explode-jive-plugin</id>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <tasks>
                                <mkdir dir="${basedir}/target/${final.name}"/>
                                <unjar src="${basedir}/target/${final.name}.jar"
                                       dest="${basedir}/target/${final.name}"/>
                            </tasks>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.1.2</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!--  Setup of war file for functional test runs -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>unpack-war</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>unpack</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <artifactItems>
                        <artifactItem>
                            <groupId>com.jivesoftware</groupId>
                            <artifactId>jive-war</artifactId>
                            <type>war</type>
                            <overWrite>false</overWrite>
                        </artifactItem>
                    </artifactItems>
                    <outputDirectory>${project.build.directory}/war</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
                <executions>
                    <execution>
                        <id>unit</id>
                        <phase>test</phase>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <skip>false</skip>
                            <excludes>
                                <exclude>**/selenium/*Test.java</exclude>
                                <exclude>**/*IntTest.java</exclude>
                            </excludes>
                            <includes>
                                <include>**/*Test.java</include>
                                <include>**/*TestCase.java</include>
                            </includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>com.jivesoftware</groupId>
            <artifactId>jive-core</artifactId>
            <version>${jive.version}</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.5</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aspects</artifactId>
            <version>3.0.3.RELEASE</version>
            <scope>provided</scope>
        </dependency>

        <!-- If using <parent> section, remove several deps below can be removed. -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.objenesis</groupId>
            <artifactId>objenesis</artifactId>
            <version>1.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>cglib</groupId>
            <artifactId>cglib</artifactId>
            <version>2.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <version>1.4.8</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito</artifactId>
            <version>1.4.8</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.8.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.dbunit</groupId>
            <artifactId>dbunit</artifactId>
            <version>2.4.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>3.0.3.RELEASE</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mortbay.jetty</groupId>
            <artifactId>jetty</artifactId>
            <version>6.1.8</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>emma</groupId>
            <artifactId>emma</artifactId>
            <version>2.1.5320</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.jivesoftware</groupId>
            <artifactId>core-test-base</artifactId>
            <version>${jive.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.jivesoftware</groupId>
            <artifactId>jive-war</artifactId>
            <version>${jive.version}</version>
            <type>war</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>1.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>15.0</version>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>int</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>emma-maven-plugin</artifactId>
                        <version>${emma-maven-plugin.version}</version>
                        <inherited>true</inherited>
                        <executions>
                            <execution>
                                <phase>process-classes</phase>
                                <goals>
                                    <goal>instrument</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!--  For unit testing -->
                    <plugin>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>2.6</version>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                        <executions>
                            <execution>
                                <id>integration</id>
                                <phase>integration-test</phase>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                                <configuration>
                                    <skip>false</skip>
                                    <excludes>
                                        <exclude>**/selenium/*Test.java</exclude>
                                    </excludes>
                                    <includes>
                                        <include>**/*IntTest.java</include>
                                    </includes>

                                    <forkMode>perTest</forkMode>
                                    <argLine>-Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=n -Xms1024m -Xmx1512m -XX:MaxPermSize=128m -server -XX:+CMSClassUnloadingEnabled -Djava.awt.headless=true</argLine>
                                    <classesDirectory>${project.build.directory}/generated-classes/emma/classes
                                    </classesDirectory>
                                    <additionalClasspathElements>
                                        <additionalClasspathElement>${project.build.directory}/test-classes
                                        </additionalClasspathElement>
                                        <additionalClasspathElement>${project.build.directory}/war/WEB-INF/classes
                                        </additionalClasspathElement>
                                        <additionalClasspathElement>${project.build.directory}/${project.name}
                                        </additionalClasspathElement>
                                    </additionalClasspathElements>
                                    <systemPropertyVariables>
                                        <pluginDirs>${project.build.directory}/${project.name}</pluginDirs>
                                        <jive.devMode>true</jive.devMode>
                                        <emma.coverage.out.file>${emma.coverage.out.file}</emma.coverage.out.file>
                                    </systemPropertyVariables>
                                </configuration>
                            </execution>
                            <execution>
                                <id>unit</id>
                                <phase>test</phase>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                                <configuration>
                                    <skip>false</skip>
                                    <excludes>
                                        <exclude>**/selenium/*Test.java</exclude>
                                        <exclude>**/*IntTest.java</exclude>
                                    </excludes>
                                    <includes>
                                        <include>**/*Test.java</include>
                                        <include>**/*TestCase.java</include>
                                    </includes>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <developers>
        <developer>
            <id>sean</id>
            <name>Sean M. Staley</name>
            <email>sean.staley@gmail.com</email>
            <organization>StaleyLabs</organization>
        </developer>
        <developer>
            <id>ben</id>
            <name>Ben Walker</name>
            <email>ben.walker@jivesoftware.com</email>
            <organization>Jive Software</organization>
        </developer>
    </developers>
</project>